// based on https://grpc.io/docs/guides/concepts.html
syntax = "proto3";

package hello;

// go 包名
option go_package = "github.com/horonlee/krathub/api/v1/hello;hellov1";
option java_multiple_files = true;
option java_package = "dev.krathub.api.hello.v1";
option java_outer_classname = "HelloProtoV1";

// SayHello 定义一个简单的 Hello 服务
service SayHello {
  rpc Hello(HelloRequest) returns (HelloResponse);
}

// HelloRequest 是 Hello 服务的请求消息
message HelloRequest {
  optional string greeting = 1;
}

// HelloResponse 是 Hello 服务的响应消息
message HelloResponse {
  string reply = 1;
}